# REG-NMS-inspired-Matching-Engine

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: fees.json  symbols.json
docs/: ARCHITECTURE.md  SETUP.md
scripts/: demo_script.py  load_test.py  recovery_test.py
src/engine/api/: rest_server.py  schemas.py  websocket_feeds.py
src/engine/core/: constants.py  matching_engine.py  order.py  order_book.py
src/engine/models/: advanced_orders.py  fee_calculator.py  trade.py
src/engine/performance/: benchmark.py  metrics.py  ring_buffer.py
src/engine/persistence/: snapshot_manager.py  wal.py
tests/: conftest.py  test_matching_engine.py  test_order_types.py  test_performance.py  test_reg_nms.py  test_web_socketBBO.js  test_web_socketOrder.js  test_web_socketTrade.js
